--- a/init/playbooks/files/jjb/ci-management.yaml
+++ b/init/playbooks/files/jjb/ci-management.yaml
@@ -3,7 +3,7 @@
     name: ci-jobs
 
     jobs:
-      - '{project-name}-ci-jobs'
+      - "{project-name}-ci-jobs"
 
     project: ci-management
     project-name: ci-management
