CI: Cleanup files, configure, and enable pre-commit
* Cleanup files using prettier via pre-commit
* Correct shellcheck complaints
* Add configuration files for pre-commit
* Update tox.ini to use pre-commit and drop coala since coala no longer
  works

Change-Id: I85ebb36fd09da90a660ab7175f02fc71bf3f180e
Signed-off-by: Andrew Grimberg <agrimberg@linuxfoundation.org>

--- a/tox.ini
+++ b/tox.ini
@@ -1,18 +1,32 @@
 [tox]
 minversion = 1.6
-envlist = coala
+envlist =
+  pre-commit
 skipsdist = true
 
-[testenv:coala]
+[testenv:pre-commit]
 basepython = python3
+allowlist_externals =
+    /bin/sh
 deps =
-    coala
-    coala-bears
-    # Markdown lint requires nodejs
-    nodeenv
+    pre-commit
+passenv = HOME
 commands =
-    nodeenv -p
-    npm install --global remark-cli remark-lint write-good
-    python3 -m nltk.downloader punkt maxent_treebank_pos_tagger averaged_perceptron_tagger
-    coala --non-interactive
-
+    pre-commit run --all-files --show-diff-on-failure
+    /bin/sh -c 'if ! git config --get user.name > /dev/null; then \
+        git config --global --add user.name "CI"; \
+        touch .git/REMOVE_USERNAME; fi'
+    /bin/sh -c 'if ! git config --get user.email > /dev/null; then \
+        git config --global --add user.email "ci@example.org"; \
+        touch .git/REMOVE_USEREMAIL; fi'
+    /bin/sh -c "if [ -f .git/COMMIT_EDITMSG ]; then \
+        cp .git/COMMIT_EDITMSG .git/COMMIT_MSGTOX; else \
+        git log HEAD -n1 | tail -n +5 | cut -c 5- > .git/COMMIT_MSGTOX; fi"
+    pre-commit run gitlint --hook-stage commit-msg --commit-msg-filename .git/COMMIT_MSGTOX
+    /bin/sh -c "rm -f .git/COMMIT_MSGTOX"
+    /bin/sh -c "if [ -f .git/REMOVE_USERNAME ]; then \
+        git config --global --unset user.name; \
+        rm -f .git/REMOVE_USERNAME; fi"
+    /bin/sh -c "if [ -f .git/REMOVE_USEREMAIL ]; then \
+        git config --global --unset user.email; \
+        rm -f .git/REMOVE_USEREMAIL; fi"
