Modify access rules

--- a/project.config
+++ b/project.config
@@ -4,3 +4,4 @@
 	description = A multi-container docker environment for testing Release Engineering work and proof-of-concepts
 [access "refs/*"]
 	read = group GitHub Replication
+	read = group Gitlab Replication
